# omni-pathlib

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  publish-to-pypi.yml  test.yml
src/omni_pathlib/: __init__.py  base_path.py
src/omni_pathlib/providers/http/: __init__.py
src/omni_pathlib/providers/local/: __init__.py
src/omni_pathlib/providers/s3/: DEV.md  __init__.py  async_ops.py  credentials.py  sync_ops.py  type_hints.py  xml1.html
src/omni_pathlib/utils/: __init__.py  guess_protocol.py
tests/: test_http_path.py  test_s3_path.py
