[project]
name = "omni_pathlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Haskely", email = "Haskely@live.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.11",
    "aiopath>=0.6.11",
    "curl-cffi>=0.7.4",
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
update_changelog_on_bump = true
changelog_incremental = true
changelog_file = "CHANGELOG.md"

[dependency-groups]
dev = [
    "commitizen>=3.18.4",
    "loguru>=0.7.3",
    "moto[server]>=5.0.26",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.1",
    "pytest-httpserver>=1.1.0",
]

[tool.mypy]
ignore_missing_imports = true
